es-sparkstreaming/.metals/.reports/metals/2023-08-30/r_scala-toplevel-mtags_00-17-39-297
id: file:///C:/Users/25810/Desktop/atguigu-elasticsearch/es-sparkstreaming/src/main/java/com/atguigu/es/Testa.scala:[34..34) in Input.VirtualFile("file:///C:/Users/25810/Desktop/atguigu-elasticsearch/es-sparkstreaming/src/main/java/com/atguigu/es/Testa.scala", "package com.atguigu.es;

object ")
file:///C:/Users/25810/Desktop/atguigu-elasticsearch/es-sparkstreaming/src/main/java/com/atguigu/es/Testa.scala:3: error: expected identifier; obtained eof
object 
       ^